--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,17 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 	<display-name>ssm</display-name>
+
+	<!-- LogBack 日志管理文件 -->
+	<context-param>
+		<param-name>logbackConfigLocation</param-name>
+		<param-value>classpath:logback.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+	</listener>
+
+	<!-- 跨域处理 -->
 	<filter>
 		<filter-name>kuayu</filter-name>
 		<filter-class>common.utils.Kuayu</filter-class>
@@ -31,17 +42,15 @@
 			<param-value>classpath:springmvc.xml</param-value>
 		</init-param>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
-		<!-- 第一种：*.action，访问以.action结尾 由DispatcherServlet进行解析 
-			第二种：/，所以访问的地址都由DispatcherServlet进行解析，对于静态文件的解析需要配置不让DispatcherServlet进行解析 
-			使用此种方式可以实现 RESTful风格的url 
-			第三种：/*，这样配置不对，使用这种配置，最终要转发到一个jsp页面时， 仍然会由DispatcherServlet解析jsp地址，不能根据jsp页面找到handler，会报错。 -->
+		<!-- 第一种：*.action，访问以.action结尾 由DispatcherServlet进行解析 第二种：/，所以访问的地址都由DispatcherServlet进行解析，对于静态文件的解析需要配置不让DispatcherServlet进行解析 
+			使用此种方式可以实现 RESTful风格的url 第三种：/*，这样配置不对，使用这种配置，最终要转发到一个jsp页面时， 仍然会由DispatcherServlet解析jsp地址，不能根据jsp页面找到handler，会报错。 -->
 		<!-- <url-pattern>*.action</url-pattern> -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
+
 	<!-- post乱码过虑器 -->
 	<filter>
 		<filter-name>CharacterEncodingFilter</filter-name>
