--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,11 +16,11 @@
 
 	<!-- 跨域处理 -->
 	<filter>
-		<filter-name>kuayu</filter-name>
-		<filter-class>common.utils.Kuayu</filter-class>
+		<filter-name>CrossDomain</filter-name>
+		<filter-class>common.utils.CrossDomain</filter-class>
 	</filter>
 	<filter-mapping>
-		<filter-name>kuayu</filter-name>
+		<filter-name>CrossDomain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
