--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 	<!-- 跨域处理 -->
 	<filter>
 		<filter-name>CrossDomain</filter-name>
-		<filter-class>common.utils.CrossDomain</filter-class>
+		<filter-class>cn.timeface.ebook.common.utils.CrossDomain</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>CrossDomain</filter-name>
